--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
@@ -47,7 +47,7 @@
                     <p:outputLabel value="data sporządzenia rach:"/>
                     <p:inputText value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.datawystawienia}" size="10" placeholder="____-__-__">
                             <p:ajax event="change" onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});" partialSubmit="true" global="false" 
-                                    listener="#{rachunekZlecenieView.ustawtabelenbpRach()}" update="RachunekZleceniaForm:walutyrachunekpanel"/>
+                                    listener="#{rachunekZlecenieView.ustawTabiPrzelicz(rachunekZlecenieView.rachunekdoumowyzlecenia)}" update="RachunekZleceniaForm:walutyrachunekpanel RachunekZleceniaForm:panelkwoty"/>
                     </p:inputText>
                     <p:outputLabel value="data od:"/>
                     <h:outputText value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.dataod}"/>
@@ -71,13 +71,13 @@
                 <p:panelGrid columns="2" style="margin-top: 10px;" id="panelkwoty">
                     <p:outputLabel value="ilośc godzin wg kalendarza Polska:"/>
                     <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.iloscgodzin}" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2">
-                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.przeliczrachunek()}" update="RachunekZleceniaForm:panelkwoty RachunekZleceniaForm:panelkwoszty"/>
+                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.przeliczrachunek(rachunekZlecenieView.rachunekdoumowyzlecenia)}" update="RachunekZleceniaForm:panelkwoty RachunekZleceniaForm:panelkwoszty"/>
                     </p:inputNumber>
                      <p:outputLabel value="kwota brutto Polska:"/>
                     <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.kwota}" id="lolo1"  decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right"/>
                     <p:outputLabel value="ilośc godzin wg kalendarza Oddelegowanie:"/>
                     <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.iloscgodzinoddelegowanie}" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2">
-                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.przeliczrachunek()}" update="RachunekZleceniaForm:panelkwoty RachunekZleceniaForm:panelkwoszty"/>
+                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.przeliczrachunek(rachunekZlecenieView.rachunekdoumowyzlecenia)}" update="RachunekZleceniaForm:panelkwoty RachunekZleceniaForm:panelkwoszty"/>
                     </p:inputNumber>
                     <p:outputLabel value="kwota brutto Oddelegowanie:"/>
                      <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.kwotaoddelegowanie}" id="lolo21"  decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right"/>
