druk rachunku do umowy zlecenia

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_dra.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_dra.xhtml
@@ -92,7 +92,7 @@
                             <h:outputText value="#{itemdra.lata}" rendered="#{itemdra.lata gt 0}"/>
                         </p:column>
                         <p:column headerText="brutto">
-                            <bcf:outputpl value="#{itemdra.bruttozus}" />
+                            <bcf:outputpl value="#{itemdra.brutto}" />
                         </p:column>
                         <p:column headerText="prac emerytalne">
                             <bcf:outputpl value="#{itemdra.pracemerytalne}"/>
