--- a/kadry/src/main/webapp/pit/sub/pit.xhtml
+++ b/kadry/src/main/webapp/pit/sub/pit.xhtml
@@ -268,7 +268,7 @@
             <h:form id="wystawionepit11">
             <p:dataTable id="datalistwa" value="#{kartaWynagrodzenView.listaPIT11}" var="itempity11"
                          rowKey="#{itempity11.id}" rowIndexVar="indexpity11" 
-                         style="height: 450px; width: 156   0px; overflow-y:scroll;" emptyMessage="Nie pobrano danych"
+                         style="height: 450px; width: 1560px; overflow-y:scroll;" emptyMessage="Nie pobrano danych"
                          sortBy="#{itempity11.pracownik.nazwiskoImie}"
                          selection="#{kartaWynagrodzenView.listaPIT11sorted}" selectionMode="single"
                          >
