--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -67,8 +67,8 @@
                         <p:column>
                             <h:outputText value="razem społ. prac."/>
                         </p:column>
-                        <p:column width="20">
-                            <h:outputText value=" "/>
+                        <p:column width="20" style="text-align: center;">
+                            <h:outputText value="is26lat" rendered="#{itempasek.do26lat eq true}" style="color:blue"/>
                         </p:column>
                     </p:row>
                     <p:row>
@@ -124,7 +124,7 @@
                         </p:column>
                         <p:column width="20" style="text-align: center;">
                             <p:commandButton icon="pi pi-print" actionListener="#{pasekwynagrodzenView.drukuj(itempasek)}" global="false"/>
-                            <p:commandButton icon="pi pi-fast-forward" actionListener="#{pasekwynagrodzenView.przelicz(itempasek)}" global="false" update="PasekwynagrodzenListForm"/>
+                            <p:commandButton icon="pi pi-fast-forward" actionListener="#{pasekwynagrodzenView.oznaczNie26(itempasek)}" global="false" update="PasekwynagrodzenListForm"/>
                         </p:column>
                     </p:row>
                     <!--                        <p:column>
